[project]
name = "ansible-lab"
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "ansible==11.*",
    "ansible-lint==24.2.*",
    "ansible-pylibssh==1.2*",
    "hvac==2.3.*",
    "python-consul2",
    "jmespath",
    "passlib",
    "bcrypt"
]

[dependency-groups]
dev = []

[tool.uv]
package = false
environments = ["platform_system != 'Windows'"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.python.org/simple"
